add chat(ChatRequest chatRequest) method support. Only commons ConverseAPI parameters are used (maxTokens, temperature, topP and stopsequences : see https://docs.aws.amazon.com/bedrock/latest/APIReference/API_runtime_InferenceConfiguration.html)